# rust-friday-battlesnakes

./: Cargo.toml
src/: learning.rs  logic.rs  main.rs  utils.rs
src/logic/: goal.rs  mod.rs
