[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "starter-snake-rust"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"
rust-pathfinding = {path = "./vendor/rust-pathfinding"}
pathfinding = "3.0.12"
itertools = "0.10.5"
rurel = "0.4.0"
lazy_static = "1.4.0"
